# Slate

./: .gitignore  README.md  implementation_plan.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: config.py  database.py  firebase_init.py  main.py
backend/app/auth/: dependencies.py
backend/app/crud/: note.py  todo.py
backend/app/models/: __init__.py  base.py  note.py  todo.py
backend/app/routers/: notes.py  todos.py
backend/app/schemas/: note.py  todo.py
frontend/: README.md  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/notes/: page.tsx
frontend/app/dashboard/todos/: page.tsx
frontend/app/help/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: Navbar.tsx  providers.tsx
frontend/components/auth/: AuthCard.tsx
frontend/components/dashboard/: DashboardPage.tsx
frontend/components/home/: HomePage.tsx
frontend/components/notes/: EditNoteDialog.tsx  NoteEditor.tsx  NoteList.tsx
frontend/components/todos/: EditTodoDialog.tsx  TaskRow.tsx  TodoList.tsx
frontend/components/ui/: SearchModal.tsx  motion.tsx  typography.tsx
frontend/context/: AuthContext.tsx
frontend/hooks/: useNotes.ts  useTodos.ts
frontend/lib/: a11y.ts  api.ts  auth-errors.ts  firebase.ts  queryKeys.ts  toasts.ts
frontend/providers/: QueryProvider.tsx
frontend/src/lib/: theme.ts
frontend/types/: index.ts
